fixed signup spacing issue

--- a/react-app/src/components/SignUpFormModal/SignUpForm.css
+++ b/react-app/src/components/SignUpFormModal/SignUpForm.css
@@ -7,3 +7,8 @@
 .signup-3 input {
   width: 390px;
 }
+
+.spacer {
+  margin-right: 20px;
+  width: 199px;
+}
